CORE-43827: All tooltip for Aura integration on SPC theming.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-tooltip.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-tooltip.scss
@@ -19,6 +19,10 @@
         transform: translateX(50%);
       }
 
+      @include breakpoint($only-mobile) {
+        #{$left}: calc(50% - 4rem);
+      }
+
       @include breakpoint($only-tablet) {
         #{$left}: -50%;
       }
@@ -55,6 +59,10 @@
       color: $aura-order-confirmation-points-question-txt;
     }
   }
+}
+
+.spc-aura-checkout-messages {
+  display: inline-flex;
 }
 
 #spc-checkout-confirmation {
