--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-otp.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-otp.scss
@@ -28,13 +28,16 @@
         &::before {
           color: $hello-member-loyalty-aura-icon;
           font-size: rem(18);
-          position: relative;
           top: rem(2);
           margin-#{$left}: rem(5);
         }
 
         .tooltip-box {
           #{$left}: rem(-60);
+
+          @include breakpoint($only-mobile) {
+            margin-#{$right}: rem(-76);
+          }
         }
       }
     }
