CORE-43042: Aura loyalty selection is not showing visually selected state -- UI.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-spc-loyalty.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-spc-loyalty.scss
@@ -138,6 +138,22 @@
         }
       }
     }
+
+    input[type=radio] {
+      &:checked ~ .radio-sim {
+        @include icon(radio-empty, before) {
+          color: $spc-checkout-radio-empty;
+        }
+      }
+
+      &.loyalty-option-selected {
+        ~ .radio-sim {
+          @include icon(radio-filled, before) {
+            color: $spc-checkout-radio-filled;
+          }
+        }
+      }
+    }
   }
 
   .linking-option {
