--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-radio.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-radio.scss
@@ -13,6 +13,7 @@ input[type=radio].linking-option-radio {
   &:checked {
     ~ .radio-sim::before {
       background: url('#{$base_theme_img_directory_path}/aura/style-icons-ui-radio-filled.svg') no-repeat;
+      color: transparent !important;
     }
   }
 
