--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-menu.scss
@@ -606,7 +606,7 @@
     }
   }
 
-  &.super-category-home {
+  &.alias--shop-aerie {
     .mobile--search {
       @include breakpoint($upto-desktop) {
         display: none !important;
