CORE-43382: Attach become member styles on PLP, SRP.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-become-member/component/_hello-member-become-member.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-become-member/component/_hello-member-become-member.scss
@@ -1,6 +1,8 @@
 .become-hello-member {
   padding: rem(43) rem(39);
   margin: rem(22) 0;
+  position: relative;
+  clear: both;
   background-color: $hello-member-components-bg;
   text-align: center;
 
