CORE-43826: Showing Become a member popup for guest user.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-promotion/component/_promo-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-promotion/component/_promo-popup.scss
@@ -11,5 +11,11 @@
         font-family: $hnm-bold;
       }
     }
+
+    .become-hello-member {
+      .become-hello-member__header {
+        font-family: $hnm-bold;
+      }
+    }
   }
 }
