--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-popup.scss
@@ -13,6 +13,10 @@
     text-decoration: underline;
     font-size: rem(14);
 
+    @include breakpoint($only-tablet) {
+      font-size: rem(12);
+    }
+
     @include breakpoint($only-mobile) {
       float: none;
       justify-content: center;
@@ -40,6 +44,7 @@
       }
 
       padding: 0 !important;
+      border: 0 !important;
     }
 
     .hm-promo-modal-title {
@@ -88,6 +93,66 @@
 
       .error {
         display: block;
+      }
+    }
+
+    .become-hello-member {
+      text-align: center;
+      background-color: $hello-member-promo-guest-bg;
+
+      .become-hello-member__header {
+        color: $hello-member-promo-guest-pop-title;
+        font-size: rem(20);
+        font-family: $alshaya-bold;
+        padding: rem(40) rem(40) 0 rem(40);
+        letter-spacing: 0.27px;
+        line-height: 1.33;
+      }
+
+      .become-hello-member__join-text {
+        font-size: rem(14);
+        letter-spacing: 0.16px;
+        color: $hello-member-promo-btn-bg;
+        line-height: 1.57;
+        padding-top: rem(5);
+      }
+
+      .become-hello-member__close {
+        display: none;
+      }
+
+      .become-hello-member__actions {
+        padding: rem(38);
+        display: flex;
+        justify-content: center;
+
+        @include breakpoint($only-mobile) {
+          flex-flow: row wrap;
+        }
+
+        .become-hello-member__actions-link--secondary {
+          @extend %button-brand;
+
+          margin-#{$right}: rem(20);
+
+          @include breakpoint($tablet) {
+            min-width: rem(160);
+          }
+
+          @include breakpoint($only-mobile) {
+            margin-#{$right}: 0;
+            margin-bottom: rem(20);
+            width: 100%;
+          }
+        }
+
+        .become-hello-member__actions-link--primary {
+          @extend %button-wide;
+
+          @include breakpoint($only-mobile) {
+            width: 100%;
+          }
+        }
       }
     }
   }
