--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_birthday-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_birthday-popup.scss
@@ -1,6 +1,6 @@
 #my-accounts-hello-member {
   .hello_member_happy_birthday_popup-content {
-    width: rem(653);
+    width: rem(653) !important;
     padding: 0 !important;
     border: 0 !important;
 
