--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2354,3 +2354,5 @@ $hello-member-bd-title: $speech-red;
 $hello-member-bd-sub-title: $mothercare-black;
 $hello-member-bd-exp-text: $grey-light;
 $hello-member-bd-close-icon: $white-five;
+$hello-member-promo-guest-bg: $light-yellow;
+$hello-member-promo-guest-pop-title: $_spc-discount-text;
