DIG-9802: Mothercare brand theming fixes for online returns.

--- a/docroot/themes/custom/transac/alshaya_mothercare/conditional-sass/online-returns/component/_order-details.scss
+++ b/docroot/themes/custom/transac/alshaya_mothercare/conditional-sass/online-returns/component/_order-details.scss
@@ -14,7 +14,7 @@
           font-size: rem(40);
           position: absolute;
           #{$left}: rem(100);
-          top: rem(-1);
+          top: 0;
 
           @include breakpoint($tablet) {
             #{$left}: 0;
