--- a/docroot/themes/custom/transac/alshaya_mothercare/conditional-sass/online-returns/component/_popup-common.scss
+++ b/docroot/themes/custom/transac/alshaya_mothercare/conditional-sass/online-returns/component/_popup-common.scss
@@ -11,4 +11,11 @@
   .continue-button {
     background: $online-return-button-bg;
   }
+
+  .cancel-return-options,
+  .cta-wrapper {
+    button {
+      text-transform: none;
+    }
+  }
 }
