--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_order-details.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_order-details.scss
@@ -18,6 +18,7 @@
     .returned-items {
       .title-wrapper {
         font-family: $hnm-demibold;
+        text-transform: uppercase;
       }
     }
 
@@ -30,6 +31,17 @@
       .return-status-wrapper {
         .status-label {
           font-family: $hnm-demibold;
+        }
+      }
+    }
+
+    .return-initiated-item,
+    .returned-items-row {
+      .return-status-id-container,
+      .return-status-wrapper {
+        .status-label {
+          font-size: rem(18);
+          line-height: rem(22);
         }
       }
     }
