CORE-41962: Super Category | Mobile | Search field is not displayed as separate section in Aerie as in American Eagle.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-menu.scss
@@ -626,4 +626,64 @@
       }
     }
   }
+
+  &.super-category-home {
+    @include breakpoint($upto-desktop) {
+      margin-top: rem(144);
+    }
+
+    &:not(.frontpage) {
+      &.hide-header {
+        @include breakpoint($upto-desktop) {
+          margin-top: rem(162);
+        }
+      }
+    }
+
+    &.hide-minimalistic-header {
+      .block-alshaya-algolia-react-autocomplete {
+        @include breakpoint($upto-desktop) {
+          top: 0 !important;
+        }
+      }
+
+      &:not(.frontpage) {
+        &.hide-header {
+          @include breakpoint($upto-desktop) {
+            margin-top: rem(50);
+          }
+        }
+
+        .c-menu-primary {
+          .mobile--menu,
+          .mobile--search {
+            @include breakpoint($upto-desktop) {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+
+    .mobile--search {
+      @include breakpoint($upto-desktop) {
+        display: none !important;
+      }
+    }
+
+    .block-alshaya-algolia-react-autocomplete {
+      @include breakpoint($upto-desktop) {
+        visibility: visible !important;
+        top: rem(114) !important;
+      }
+
+      &.focused {
+        .algolia-search-back-icon {
+          @include breakpoint($upto-desktop) {
+            visibility: visible;
+          }
+        }
+      }
+    }
+  }
 }
