--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-menu.scss
@@ -26,4 +26,11 @@
       }
     }
   }
+
+  #mini-cart-wrapper,
+  .static-minicart-wrapper {
+    @include breakpoint($only-tablet) {
+      margin-top: rem(10);
+    }
+  }
 }
