CORE-43906: UI review comment from main stream merge -- review comment addressed.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
@@ -13,7 +13,7 @@
       }
     }
 
-    .hm-benefit-status-info {
+    .hello-member-benefit-status-info {
       #status-msg {
         font-family: $hnm-demibold;
       }
