--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-promotion/component/_promo-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-promotion/component/_promo-popup.scss
@@ -1,12 +1,12 @@
 .hello-member-promo-section {
-  .hm-promo-pop-link {
+  .hello-member-promo-pop-link {
     .promo-notification {
       background-color: $hello-member-promo-notification-icon;
     }
   }
 
   .popup-container {
-    .hm-promo-modal-content {
+    .hello-member-promo-modal-content {
       .error-info-section {
         font-family: $hnm-bold;
       }
