--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/spc-checkout-confirmation/component/_spc-checkout-order-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/spc-checkout-confirmation/component/_spc-checkout-order-detail.scss
@@ -9,7 +9,7 @@
 
   .spc-order-summary-item {
     .spc-value {
-      &.hm-accured-points {
+      &.hello-member-accured-points {
         color: $hello-member-accured-points-txt;
       }
     }
