--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-tabs.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-tabs.scss
@@ -1,6 +1,6 @@
 .hello-member-promo-section {
   .popup-container {
-    .hm-promo-modal-content {
+    .hello-member-promo-modal-content {
       .react-tabs__tab-list {
         display: flex;
         border-bottom: rem(1) solid $hello-member-promo-tab-border;
