--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-registration/component/_become-member.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-registration/component/_become-member.scss
@@ -164,7 +164,7 @@ details {
   }
 }
 
-.hm-benefit-subtitle {
+.hello-member-benefit-subtitle {
   font-size: rem(14);
   color: $hello-member-registration-labels-txt;
 
