--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
@@ -75,7 +75,7 @@
       }
     }
 
-    .hm-benefit-status-info {
+    .hello-member-benefit-status-info {
       position: fixed;
       #{$right}: 0;
       top: 40%;
