--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-list.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-list.scss
@@ -105,6 +105,7 @@
           display: inline-flex;
           justify-content: center;
           width: 100%;
+          cursor: pointer;
 
           @include breakpoint($only-mobile) {
             padding: rem(30) 0 rem(26);
