CORE-43874: Wishlist & cart icon alignment fix on sticky header.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/wishlist/component/_wishlist-header.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/wishlist/component/_wishlist-header.scss
@@ -90,6 +90,18 @@ body.wishlist-enabled {
       }
     }
   }
+
+  .filter-fixed-top {
+    .sticky-filter-wrapper {
+      .wishlist-minicart-sticky-wrapper {
+        @include breakpoint($desktop) {
+          top: 0;
+          transform: none;
+          height: rem(60);
+        }
+      }
+    }
+  }
 }
 
 .wishlist-icon {
