--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-cod-mobile-verification/component/_checkout-cod-mobile-verification.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-cod-mobile-verification/component/_checkout-cod-mobile-verification.scss
@@ -1,38 +1,100 @@
-.cod-mobile-verify-wrapper {
-  .cod-mobile-verify-text {
-    span {
-    }
+.cod-mobile-otp {
+  @include breakpoint($only-mobile) {
+    margin-#{$right}: rem(28);
+  }
 
-    button {
+  &__text-wrapper {
+    margin-top: rem(20);
+    font-size: rem(14);
+
+    @include breakpoint($tablet) {
+      margin-top: rem(21);
     }
   }
 
-  .cod-otp-form-wrapper {
-    form {
-      div {
-        div {
-          input {
-          }
+  &__text {
+    color: $spc-checkout-cod-otp-secondary;
+  }
 
-          span {
-          }
-        }
+  &__btn-link {
+    text-decoration: underline;
+    text-transform: capitalize;
+    color: $spc-checkout-cod-otp-primary;
+    background: none;
+    border: none;
+    margin-#{$left}: rem(8);
+    padding: 0;
+  }
+
+  &__form {
+    margin-top: rem(52);
+  }
+
+  &__field {
+    @include breakpoint($only-mobile) {
+      &:not(:last-child) {
+        margin-#{$right}: rem(10);
+      }
+    }
+
+    @include breakpoint($tablet) {
+      margin-#{$right}: rem(15);
+    }
+
+    & > input[type="tel"] {
+      border-color: $spc-checkout-cod-otp-secondary !important;
+      padding: rem(5) 0 !important;
+      font-size: rem(18);
+
+      &:focus {
+        border-color: $spc-checkout-cod-otp-primary !important;
       }
 
-      .cod-otp-lower-wrapper {
-        .resend-otp-text {
-        }
-
-        div {
-          button {
-            span {
-            }
-          }
-        }
-
-        button {
-        }
+      @include breakpoint($tablet) {
+        padding: rem(6) 0 !important;
+        font-size: rem(20);
       }
+    }
+  }
+
+  &__controls {
+    margin: rem(32) auto rem(20);
+    display: flex;
+
+    @include breakpoint($only-mobile) {
+      flex-direction: column;
+    }
+
+    @include breakpoint($tablet) {
+      margin: rem(70) auto rem(12);
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+
+  &__submit {
+    border: none;
+    background: $spc-checkout-cod-otp-primary;
+    color: $primary_btn_text;
+    font-family: $alshaya-bold;
+    font-size: rem(16);
+    line-height: 1.13;
+    letter-spacing: rem(1.14);
+    text-transform: uppercase;
+
+    &:disabled {
+      opacity: 0.2;
+      pointer-events: none;
+    }
+
+    @include breakpoint($only-mobile) {
+      margin-top: rem(26);
+      padding: rem(14);
+    }
+
+    @include breakpoint($tablet) {
+      padding: rem(12);
+      width: rem(162);
     }
   }
 }
