CO-101: Brand and inline styles to common styles - PR feedback updates.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-cod-mobile-verification/component/_checkout-cod-mobile-verification.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-cod-mobile-verification/component/_checkout-cod-mobile-verification.scss
@@ -9,6 +9,7 @@
   }
 
   &__btn-link {
+    text-decoration: underline;
     color: $spc-checkout-cod-otp-primary;
     background: none;
     border: none;
@@ -22,6 +23,7 @@
 
   &__field {
     & > input[type="tel"] {
+      width: 100% !important;
       border-color: $spc-checkout-cod-otp-secondary !important;
       padding: rem(5) 0 !important;
       font-size: rem(18);
