CORE-43906: UI review comment from main stream merge.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-promotion/component/_promo-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-promotion/component/_promo-popup.scss
@@ -8,13 +8,13 @@
   .popup-container {
     .hello-member-promo-modal-content {
       .error-info-section {
-        font-family: $hnm-bold;
+        font-family: $hnm-demibold;
       }
     }
 
     .become-hello-member {
       .become-hello-member__header {
-        font-family: $hnm-bold;
+        font-family: $hnm-demibold;
       }
     }
   }
