CORE-0356: Birthday Voucher popup not displaying fully and there is no scrollbar also available for the popup.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_birthday-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_birthday-popup.scss
@@ -3,6 +3,8 @@
     width: rem(653) !important;
     padding: 0 !important;
     border: 0 !important;
+    overflow: auto;
+    height: 100%;
 
     @include breakpoint($only-tablet) {
       width: 70% !important;
