Revert "CORE-42624: [Drupal - FE - Mobile] - Provide the product details and BNPL payment options when scrolling PDP page."
This reverts commit 9f465a3a5b0def7e4c9efb05e80d206a130603e0.

--- a/docroot/themes/custom/transac/alshaya_hnm/templates/alshaya_magazine.html.twig
+++ b/docroot/themes/custom/transac/alshaya_hnm/templates/alshaya_magazine.html.twig
@@ -1,7 +1,7 @@
 {% extends "@alshaya_product_zoom/alshaya_magazine.html.twig" %}
 
 {% block beforeDescription %}
-	<div class="content__title_wrapper_description mobile-only-show">
+	<div class="content__title_wrapper_description">
 		{% if product_title %}
 			<h1>{{ product_title }}</h1>
 		{% endif %}
