--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/magazine-layout/component/_magazine-gallery.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/magazine-layout/component/_magazine-gallery.scss
@@ -48,6 +48,27 @@
         color: $gray44;
       }
     }
+
+    @include breakpoint($only-mobile) {
+      .content__title_wrapper_description {
+        text-align: left;
+        padding: rem(16) 0 rem(26);
+
+        h1 {
+          font-size: rem(16);
+        }
+
+        .info-wrapper {
+          font-size: rem(14);
+
+          .price-block {
+            border-bottom: rem(1) solid $pdp_price_block_div;
+            padding-bottom: rem(10);
+            margin-bottom: rem(18);
+          }
+        }
+      }
+    }
   }
 
   .collection-labels {
