CORE-42624: [Drupal - FE - Mobile] - Provide the product details and BNPL payment options when scrolling PDP page.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/magazine-layout/component/_magazine-gallery.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/magazine-layout/component/_magazine-gallery.scss
@@ -51,7 +51,7 @@
 
     @include breakpoint($only-mobile) {
       .content__title_wrapper_description {
-        text-align: left;
+        text-align: $left;
         padding: rem(16) 0 rem(26);
 
         h1 {
