CORE-42936: [Promotion Engine] [CART Page] [BE] - Benefits popup on basket for both guest and logged in cusomer.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-tabs.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-tabs.scss
@@ -5,6 +5,7 @@
         display: flex;
         border-bottom: rem(1) solid $hello-member-promo-tab-border;
         padding: 0;
+        margin-top: rem(4);
 
         .react-tabs__tab {
           font-family: $alshaya-thin;
