--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-popup.scss
@@ -82,17 +82,18 @@
 
       .error-info-section {
         display: none;
-        margin: rem(30) 0;
-        background-color: $hello-member-promo-err-sec-bg;
         color: $hello-member-promo-btn-bg;
         font-size: rem(12);
         font-family: $alshaya-bold;
         letter-spacing: 0.6px;
         padding: rem(6) rem(8);
+        text-align: center;
+        line-height: 1.75;
       }
 
       .error {
-        display: block;
+        display: flex;
+        flex-flow: column;
       }
     }
 
