CORE-42624: [Drupal - FE - Mobile] - Provide the product details and BNPL payment options when scrolling PDP page.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/magazine-layout/component/_magazine-gallery.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/magazine-layout/component/_magazine-gallery.scss
@@ -62,7 +62,7 @@
           font-size: rem(14);
 
           .price-block {
-            border-bottom: rem(1) solid $pdp_price_block_div;
+            border-bottom: rem(1) solid $pdp_bnpl_grey_shadow;
             padding-bottom: rem(10);
             margin-bottom: rem(18);
           }
