CORE-43939: Fixed currency code position on PDP.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-pdp-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-pdp-detail.scss
@@ -38,7 +38,7 @@
 
         &-price-amount,
         &-final-price-amount {
-          padding-#{$left}: 0.1875rem;
+          padding-left: 0.1875rem;
           direction: ltr;
         }
 
