--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-desc-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-desc-popup.scss
@@ -89,7 +89,7 @@
 
       &-price-amount,
       &-final-price-amount {
-        padding-#{$left}: 0.1875rem;
+        padding-left: 0.1875rem;
       }
 
       &-price-container {
