CORE-0349: country code not displayed properly in checkout page /Aura points.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-mob.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-mob.scss
@@ -60,9 +60,13 @@
     .spcAuraSelect__menu {
       margin: 0;
       box-shadow: none;
-      width: 83%;
+      width: calc(100% - 4.875rem);
       top: calc(100% - 2rem);
       #{$left}: rem(48);
+
+      @include breakpoint($only-mobile) {
+        width: calc(100% - 3.875rem);
+      }
 
       .spcAuraSelect__menu-list {
         padding: 0;
