CO-103: Change mobile popup theming.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -875,3 +875,6 @@ $hm-benefit-Tnc-txt: $silver-chalice;
 $hm-pdp-points-earned-txt: $venetian_red;
 // hello member SPC
 $hm-accured-points-txt: $hnm-red;
+
+// Checkout OTP mobile verification.
+$cod-otp-field-invalid: $error;
