--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2319,3 +2319,4 @@ $hm-loyalty-labels-txt: $grey-light;
 // Checkout OTP mobile verification.
 $spc-checkout-cod-otp-primary: $mothercare-black;
 $spc-checkout-cod-otp-secondary: $grey-light;
+$cod-otp-field-invalid: $red-error;
