--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-pdp/component/_pdp-points.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-pdp/component/_pdp-points.scss
@@ -1,4 +1,8 @@
 #hello-member-pdp {
+  @include breakpoint($only-mobile) {
+    width: 100%;
+  }
+
   .hello-member-points {
     font-size: rem(10);
     color: $hm-pdp-points-earned-txt;
