CORE-44292: Hello member birthday popup scroll issue and cart page become a member pop alignment issue.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_birthday-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_birthday-popup.scss
@@ -3,8 +3,6 @@
     width: rem(653) !important;
     padding: 0 !important;
     border: 0 !important;
-    overflow: auto;
-    height: 100%;
 
     @include breakpoint($only-tablet) {
       width: 70% !important;
@@ -17,6 +15,8 @@
     .hello-member-happy-birthday-popup {
       background: $hello-member-membership-success-popup-bg;
       text-align: center;
+      overflow: auto;
+      max-height: 100vh;
 
       .happy-birthday-popup-header {
         .image-container {
