--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-popup.scss
@@ -97,6 +97,11 @@
       }
     }
 
+    #hello-member-become-hello-member {
+      background-color: $hello-member-promo-guest-bg;
+      padding-bottom: rem(4);
+    }
+
     .become-hello-member {
       text-align: center;
       background-color: $hello-member-promo-guest-bg;
@@ -123,36 +128,23 @@
       }
 
       .become-hello-member__actions {
-        padding: rem(38);
+        padding: rem(38) rem(16);
         display: flex;
         justify-content: center;
-
-        @include breakpoint($only-mobile) {
-          flex-flow: row wrap;
-        }
+        flex-flow: row wrap;
 
         .become-hello-member__actions-link--secondary {
           @extend %button-brand;
 
-          margin-#{$right}: rem(20);
-
-          @include breakpoint($tablet) {
-            min-width: rem(160);
-          }
-
-          @include breakpoint($only-mobile) {
-            margin-#{$right}: 0;
-            margin-bottom: rem(20);
-            width: 100%;
-          }
+          margin-#{$right}: 0;
+          width: 100%;
+          margin-bottom: rem(20);
         }
 
         .become-hello-member__actions-link--primary {
           @extend %button-wide;
 
-          @include breakpoint($only-mobile) {
-            width: 100%;
-          }
+          width: 100%;
         }
       }
     }
