CORE-41962: Super Category | Mobile | Search field is not displayed as separate section in Aerie as in American Eagle.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-menu.scss
@@ -629,7 +629,11 @@
 
   &.super-category-home {
     @include breakpoint($upto-desktop) {
-      margin-top: rem(144);
+      margin-top: rem(162);
+
+      html[lang="ar"] & {
+        margin-top: rem(162);
+      }
     }
 
     &:not(.frontpage) {
