CORE-44238: Fixes for disable button and error message.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-list.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-list.scss
@@ -80,7 +80,7 @@
         .voucher-err-msg {
           font-size: rem(14);
           color: $hello-member-promo-available-notification-icon;
-          padding: rem(16);
+          padding-bottom: rem(16);
 
           &:empty {
             display: none;
