CORE-43989: DIG-5351 | Slice-2 | H&M | Dev | Mobile | Validation is not visible.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/header/_header-primary.scss
@@ -220,7 +220,7 @@ header {
 */
 
 .c-menu-primary {
-  @include breakpoint($only-tablet) {
+  @include breakpoint($upto-tablet) {
     height: 0;
   }
 
