CORE-000: Bug fix for error handling in benefit page.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
@@ -127,6 +127,12 @@
           padding-#{$right}: rem(8);
         }
       }
+
+      .error {
+        font-size: rem(14);
+        color: $hello-member-promo-available-notification-icon;
+        padding-bottom: rem(16);
+      }
     }
   }
 
