--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
@@ -123,6 +123,10 @@
     p {
       margin: 0;
     }
+
+    ~ div {
+      @include force-ltr();
+    }
   }
 
   .hello-member-modal-form-actions {
