CORE-44286: Fixed color and other styles for static-header total price (TBS).

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/header/_header-primary.scss
@@ -470,3 +470,15 @@ html[lang='ar'] {
     }
   }
 }
+
+// Matching the styles of the static header's total to the non-static header's total
+.static-minicart-wrapper {
+  .cart-link-total {
+    color: $minicart-total;
+    font-size: rem(16);
+
+    html[lang='ar'] & {
+      margin-top: rem(8);
+    }
+  }
+}
