--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/handlebars/alshaya-rcs-plp-mobile-menu.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/handlebars/alshaya-rcs-plp-mobile-menu.handlebars
@@ -1,10 +1,11 @@
-{{ attach_library('alshaya_white_label/rcs-ph-plp-mobile-menu') }}
 <div class="view-content">
+  {{#each this as |menuItem|}}
   <div class="views-row">
     <div class="views-field views-field-name">
       <span class="field-content">
-        <a href="{{ data.path }}" hreflang="{{ data.langcode }}">{{ data.name }}</a>
+        <a href="{{menuItem.url_path}}" hreflang="{{menuItem.langcode}}">{{menuItem.name}}</a>
       </span>
     </div>
   </div>
+  {{/each}}
 </div>
