CORE-42824: AEO UAT | Cart icon is not aligned correctly with other elements in the header.

--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-menu.scss
@@ -27,8 +27,7 @@
     }
   }
 
-  #mini-cart-wrapper,
-  .static-minicart-wrapper {
+  #mini-cart-wrapper {
     @include breakpoint($only-tablet) {
       margin-top: rem(10);
     }
