--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full-magazine.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full-magazine.html.twig
@@ -34,6 +34,10 @@
   <div class="content-sidebar-wrapper">
     {% block titleBlock %}
       <div class="content__title_wrapper">
+        {% if hello_member_status is defined and hello_member_status %}
+          <div id="hello-member-pdp"></div>
+        {% endif %}
+
         {% if quantity_limit_enabled == true %}
           <div class="order-quantity-limit-message mobile-only"></div>
         {% endif %}
