CORE-0367: [Hello-Member Points]Checkout : Earning points count mismatching with the checkout page & Order confirmation page when any discount is applied.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-points.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-points.scss
@@ -126,4 +126,86 @@
       }
     }
   }
+
+  .loyalty-options-registered {
+    .aura-earned-points {
+      display: flex;
+      align-items: center;
+
+      .tooltip-anchor {
+        margin-#{$left}: rem(8);
+
+        &::before {
+          background: $aura-order-confirmation-points-question-bg;
+          border: none;
+          color: $aura-order-confirmation-points-question-txt;
+        }
+      }
+    }
+
+    .loyalty-option {
+      &.hello_member {
+        .tooltip-anchor {
+          margin-#{$left}: rem(4);
+
+          &::before {
+            color: $hello-member-loyalty-aura-icon;
+            font-size: rem(16);
+            top: rem(3);
+            position: relative;
+          }
+        }
+      }
+    }
+
+    .tooltip-anchor {
+      .tooltip-box {
+        font-family: $aura-regular;
+        background: $aura-order-confirmation-points-tooltip-bg;
+        box-shadow: 0 rem(2) rem(20) 0 rgba(0, 0, 0, 0.24);
+        border: none;
+        color: $aura-order-confirmation-points-tooltip-txt;
+        bottom: rem(32);
+        #{$left}: 50%;
+        transform: translateX(-50%);
+
+        html[lang=ar] & {
+          transform: translateX(50%);
+        }
+
+        @include breakpoint($only-mobile) {
+          #{$left}: calc(50% - 4rem);
+        }
+
+        @include breakpoint($only-tablet) {
+          #{$left}: -50%;
+        }
+
+        &::before,
+        &::after {
+          border-top-color: $aura-order-confirmation-points-tooltip-bg;
+
+          @include breakpoint($only-tablet) {
+            margin-#{$left}: rem(6);
+          }
+
+          @include breakpoint($only-mobile) {
+            margin-#{$left}: rem(50);
+          }
+
+          html[lang=ar] & {
+            left: 10%;
+
+            @include breakpoint($tablet) {
+              left: 40%;
+            }
+
+            @include breakpoint($desktop) {
+              left: 50%;
+            }
+          }
+        }
+      }
+    }
+  }
 }
